   argument for modification.  The method now takes no arguments and just
   returns a hash reference of metadata. [David Golden]

 Bug fixes:
 - Updated PPM generation to PPM v4 (RT#49600) [Olivier Mengue]
 - When c_source is specified, the directory scan will include additional,
   less-common C++ extensions (RT49298) [David Golden]

 Other:
 - Replaced use of YAML.pm with YAML::Tiny; Module::Build::YAML is now
   based on YAML::Tiny as well [David Golden]
 - Reduced amount of console output under normal operation (use --verbose
   to see all output)

0.35_02 - Mon Sep  7 22:37:42 EDT 2009

 Enhancements:
 - Added 'needs_compiler' property.  Defaults to true if XS or c_source
   exist.  If true, ExtUtils::CBuilder is also added to build_requires.
   [David Golden]
 - File::ShareDir automatically added to 'requires' if 'share_dir' is set
   [David Golden]
 - Added 'Build installdeps' action to install needed dependencies via
   a user-configurable command line program.  (Defaults to 'cpan'.)
   [Eric Wilhelm]

 Bug fixes:
 - Failure to detect a compiler will now warn during Build.PL and be a
   fatal error when trying to compile during Build. (RT#48918) [David
   Golden]
 - Fixed directory sorting failure in share_dir.t [David Golden]
 - Property defaults that are data structures were being assigned as
   references to new objects. Changed so that defaults are cloned instead.
   (This mostly affects testing, which often creates multiple objects in the
   same process) [David Golden]
 - Simplified error message on exit under use_tap_harness [suggested by
   David Wheeler]
 - Fixed typemap search to use a dist-level typemap if a typemap is not
   found in the directory with the *.xs file; (was manifesting as warnings
   in Perl 5.6 tests) [David Golden]

 Other:
 - Replaced guts of new_from_context().  Build.PL is now executed in a
   separate process before resume() is called.  (This is generally only of