@@ -11,6 +11,9 @@ Revision history for Perl extension Module::Build.
  - Updated PPM generation to PPM v4 (RT#49600) [Olivier Mengue]
  - When c_source is specified, the directory scan will include additional,
    less-common C++ extensions (RT49298) [David Golden]
+ - When module_name is not supplied, no packlist was being written; fixed
+   by guessing module_name from dist_version_from or the directory name
+   (just like ExtUtils::Manifest does without NAME) [David Golden]
 
  Other:
  - Replaced use of YAML.pm with YAML::Tiny; Module::Build::YAML is now
